--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "country-data",
+  "name": "@abx/country-data",
   "version": "0.0.25",
   "description": "Data about countries - like their ISO codes and currencies",
   "homepage": "https://github.com/OpenBookPrices/country-data",
